[metadata]
name = cbs_analyzer
version = 1.0.4
author = Yousef Abuzahrieh
author_email = yousefzahrieh17@gmail.com
description = A tool for analyzing Chase Bank statements PDF files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yousefabuz17/CBSAnalyzer
download_url = https://github.com/yousefabuz17/CBSAnalyzer.git
platforms = Windows, Linux, MacOS
license = Apache Software License
python_requires = >=3.10
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Utilities

[options]
packages = find:
package_dir =
    = src
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
cbs_analyzer.cbs_utils =
    file_handler.sh